@startuml AI_Match_Insights_Classes
!theme plain
title Diagram Klas: AI Match Insights (Context Injection Implementation)

package "Betting.Domain" {
    class AiMatchInsight {
        +Guid EventId
        +string Content
        +DateTime GeneratedAt
        +AiMatchInsight(Guid eventId, string content)
    }
}

package "Betting.Application" {
    interface IAiAssistantService {
        +Task<string> GetMatchInsightAsync(Guid eventId)
    }

    interface IGeminiClient {
        +Task<string> GenerateTextAsync(string prompt)
    }
    
    interface IOddsIntegrationService {
        +Task<string> GetRecentScoresAsync(string sportKey, int daysFrom)
        +Task<string> GetCurrentOddsAsync(Guid eventId)
    }
}

package "Betting.Infrastructure" {
    interface IAiMatchInsightRepository {
        +Task<AiMatchInsight?> GetByEventIdAsync(Guid eventId)
        +Task AddOrUpdateAsync(AiMatchInsight insight)
    }

    class AiAssistantService {
        -IAiMatchInsightRepository _repo
        -IEventRepository _eventRepo
        -IOddsIntegrationService _oddsApi
        -IGeminiClient _geminiClient
        +Task<string> GetMatchInsightAsync(Guid eventId)
        -string BuildContextPrompt(Event match, string scores, string odds)
    }

    class AiMatchInsightRepository {
        -BettingDbContext _context
        +Task<AiMatchInsight?> GetByEventIdAsync(Guid eventId)
        +Task AddOrUpdateAsync(AiMatchInsight insight)
    }

    class GeminiClient {
        -string _apiKey
        +Task<string> GenerateTextAsync(string prompt)
    }
}

IAiAssistantService <|.. AiAssistantService
IAiMatchInsightRepository <|.. AiMatchInsightRepository
IGeminiClient <|.. GeminiClient

AiAssistantService --> IAiMatchInsightRepository
AiAssistantService --> IGeminiClient
AiAssistantService --> IOddsIntegrationService
AiMatchInsightRepository --> AiMatchInsight
@enduml
